--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,8 @@ h1, h2, h3, h4, h5, h6, p {
     transition: transform .5s linear, -webkit-transform .5s linear; }
   .login_page_wrap_form .checkbox_container {
     margin-top: 30px;
-    height: 18px; }
+    height: 18px;
+    text-align: left; }
   .login_page_wrap_form .form_checkbox {
     opacity: 50%;
     position: absolute;
@@ -151,3 +152,51 @@ h1, h2, h3, h4, h5, h6, p {
     display: block; }
   .login_page_wrap_form .form_checkbox_checkmark::after {
     background: url("/Icons/checkboxon_1x.png"); }
+  .login_page_wrap_form .checkbox {
+    position: relative;
+    margin-bottom: 1rem; }
+  .login_page_wrap_form .checkbox__input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    position: absolute;
+    top: -3px;
+    left: 17px; }
+  .login_page_wrap_form .checkbox__label {
+    padding-left: 82px;
+    font-size: 1rem;
+    color: #060606;
+    cursor: pointer; }
+  .login_page_wrap_form .checkbox__label:before {
+    content: "";
+    display: block;
+    width: 24px;
+    height: 24px;
+    background: url("/Icons/checkbox_1x.png") no-repeat;
+    background-size: 24px 24px;
+    position: absolute;
+    top: -3px;
+    left: 17px;
+    z-index: 1;
+    -webkit-transition: background .1s linear, border .1s linear;
+    -o-transition: background .1s linear, border .1s linear;
+    transition: background .1s linear, border .1s linear; }
+  .login_page_wrap_form .checkbox__label:after {
+    content: "";
+    display: block;
+    width: 24px;
+    height: 24px;
+    background: url("/Icons/checkboxon_1x.png") no-repeat;
+    background-size: 24px 24px;
+    opacity: 0;
+    position: absolute;
+    top: -3px;
+    left: 17px;
+    z-index: 2;
+    -webkit-transition: opacity .1s linear;
+    -o-transition: opacity .1s linear;
+    transition: opacity .1s linear; }
+  .login_page_wrap_form .checkbox__input:checked + .checkbox__label:before {
+    opacity: 0; }
+  .login_page_wrap_form .checkbox__input:checked + .checkbox__label:after {
+    opacity: 1; }
