--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,3 +178,55 @@ h1, h2, h3, h4, h5, h6, p {
     left: 0;
     right: 0;
     background-color: red; }
+  .login_page_wrap_form .country_list {
+    display: block;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 2;
+    position: absolute;
+    top: 80px;
+    margin: 0 auto;
+    width: 360px;
+    height: 180px;
+    background: white;
+    -webkit-box-shadow: 0px 3px 10px silver;
+    box-shadow: 0px 3px 10px silver;
+    border-radius: 10px;
+    overflow: hidden;
+    -webkit-transition: opacity 0.1s linear;
+    -o-transition: opacity 0.1s linear;
+    transition: opacity 0.1s linear; }
+    .login_page_wrap_form .country_list ul {
+      overflow: auto;
+      display: block;
+      list-style: none;
+      width: 375px;
+      height: 180px;
+      margin: 0;
+      padding: 0;
+      cursor: pointer; }
+      .login_page_wrap_form .country_list ul li {
+        vertical-align: middle;
+        display: block;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        padding: 14.5px 0;
+        margin: auto 0;
+        text-align: center;
+        height: 45px; }
+        .login_page_wrap_form .country_list ul li .countryFlag {
+          float: left;
+          margin-left: 35px;
+          pointer-events: none; }
+        .login_page_wrap_form .country_list ul li .countryName {
+          float: left;
+          margin-left: 30px;
+          pointer-events: none; }
+        .login_page_wrap_form .country_list ul li .countryNum {
+          float: right;
+          margin-right: 35px;
+          color: #a3adb5;
+          pointer-events: none; }
+      .login_page_wrap_form .country_list ul li:hover {
+        background-color: #f5f5f5; }
