--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,12 +323,17 @@ h1, h2, h3, h4, h5, h6, p {
     font-size: 12px; }
 
 .namePage {
-  visibility: hidden; }
+  visibility: hidden;
+  opacity: 1;
+  -webkit-transition: opacity .2s linear;
+  -o-transition: opacity .2s linear;
+  transition: opacity .2s linear; }
   .namePage .login_page_wrap_logo {
     background-color: #4ea4f6;
     width: 160px;
     height: 160px;
-    border-radius: 100%; }
+    border-radius: 100%;
+    cursor: pointer; }
   .namePage .addPhotoButton {
     width: 54px; }
 
@@ -353,3 +358,100 @@ h1, h2, h3, h4, h5, h6, p {
   padding: 0 5px;
   color: #707579;
   font-size: 12px; }
+
+.form_default--start {
+  opacity: 0;
+  cursor: pointer;
+  visibility: visible;
+  font-weight: bold;
+  color: #fff;
+  border: none;
+  font-size: 16px;
+  position: relative;
+  border-radius: 10px;
+  outline: none;
+  width: 360px;
+  padding: 18px;
+  margin: 25px auto 0;
+  background-color: #4ea4f6;
+  -webkit-transition: opacity .2s linear;
+  -o-transition: opacity .2s linear;
+  transition: opacity .2s linear; }
+
+.addPhotoModule {
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity .2s linear;
+  -o-transition: opacity .2s linear;
+  transition: opacity .2s linear; }
+
+.addPhotoBackground {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.33; }
+
+.addPhotoWindow {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 400px;
+  border-radius: 2.5%;
+  z-index: 777;
+  background-color: #fff; }
+  .addPhotoWindow span {
+    font-size: 16px;
+    position: absolute;
+    top: 18px;
+    font-weight: bold; }
+
+.addPhotoClose {
+  margin: 18px;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  opacity: 60%; }
+
+.addPhotoClose:hover {
+  opacity: 80%; }
+
+.addPhotoCheckButton {
+  background-color: #4ea4f6;
+  position: absolute;
+  height: 45px;
+  width: 45px;
+  border-radius: 100%;
+  margin: 15px;
+  left: 325px;
+  top: 325px;
+  cursor: pointer; }
+  .addPhotoCheckButton img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 20px;
+    height: 20px; }
+
+.addPhotoAvatar {
+  width: 280px;
+  height: 280px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  border-radius: 2%; }
+
+.mainPage {
+  visibility: hidden; }
