--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -360,12 +360,16 @@ h1, h2, h3, h4, h5, h6, p
 
 .namePage
   visibility: hidden
+  opacity: 1
+  transition: opacity .2s linear
 
   .login_page_wrap_logo
     background-color: $textActiveColor
     width: 160px
     height: 160px
     border-radius: 100%
+    cursor: pointer
+
 
   .addPhotoButton
     // fill: #ffffff
@@ -394,3 +398,95 @@ h1, h2, h3, h4, h5, h6, p
   padding: 0 5px
   color: #707579
   font-size: 12px
+
+.form_default--start
+  opacity: 0
+  cursor: pointer
+  visibility: visible
+
+  font-weight: bold
+  color: #fff
+  border: none
+  font-size: 16px
+  position: relative
+  border-radius: 10px
+  outline: none
+  width: 360px
+  padding: 18px
+  margin: 25px auto 0
+  background-color: $textActiveColor
+  transition: opacity .2s linear
+
+.addPhotoModule
+  visibility: hidden
+  opacity: 0
+  transition: opacity .2s linear
+
+.addPhotoBackground
+  position: fixed
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
+  background-color: black
+  opacity: 0.33
+
+.addPhotoWindow
+  position: fixed
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
+  width: 400px
+  height: 400px
+  border-radius: 2.5%
+  z-index: 777
+  background-color: #fff
+
+  span
+    font-size: 16px
+    position: absolute
+    top: 18px
+    font-weight: bold
+
+.addPhotoClose
+  margin: 18px
+  width: 20px
+  height: 20px
+  cursor: pointer
+  opacity: 60%
+
+.addPhotoClose:hover
+  opacity: 80%
+
+.addPhotoCheckButton
+  background-color: $textActiveColor
+  position: absolute
+  height: 45px
+  width: 45px
+  border-radius: 100%
+  margin: 15px
+  left: 325px
+  top: 325px
+  cursor: pointer
+
+  img
+    // margin: 100px
+    position: absolute
+    left: 50%
+    top: 50%
+    transform: translate(-50%, -50%)
+    width: 20px
+    height: 20px
+    // border-radius: 50%
+
+.addPhotoAvatar
+  width: 280px
+  height: 280px
+  position: absolute
+  left: 50%
+  top: 50%
+  transform: translate(-50%, -50%)
+  border-radius: 2%
+
+.mainPage
+  visibility: hidden
