mtproto alfa implementation

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -402,7 +402,7 @@ h1, h2, h3, h4, h5, h6, p
 .form_default--start
   opacity: 0
   cursor: pointer
-  visibility: visible
+  visibility: hidden
 
   font-weight: bold
   color: #fff
